--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -41,12 +41,42 @@
 \begin{document}
 
 \morefloats
-\setcounter{secnumdepth}{-1} % turn off section numbering
+\setcounter{secnumdepth}{2} % turn on section numbering, for now
 
 \input{frontmatter.tex}
 
 \blankpage
 
-Here the write-up goes...
+\chapter{Introduction}
+\label{sec:Introduction}
+\input{tex/Introduction.tex}
+
+\chapter{List of simplified models: choices and implementation}
+\label{sec:SimplifiedModelsIntro} 
+\input{tex/SimplifiedModelsIntro.tex}
+
+\section{Generic models for mono-jet signatures}
+\label{subsec:MonojetLikeModels}
+\input{tex/MonojetLikeModels}
+
+\section{Specific models for signatures with EW bosons}
+\label{subsec:EWSpecificModels}
+\input{tex/EWSpecificModels}
+
+\section{Specific models for signatures with heavy flavor quarks}
+\label{subsec:DMHFModels}
+\input{tex/DMHFModels}
+
+\section{SUSY-inspired simplified models}
+\label{subsec:SUSYModels}
+\input{tex/SUSYModels}
+
+\chapter{Validity of EFT approach}
+\label{sec:EFTValidity} 
+\input{tex/EFTValidity.tex}
+
+\chapter{Recommendations for expressing collider constraints}
+\label{sec:ColliderConstraints} 
+\input{tex/ColliderConstraints.tex}
 
 \end{document}
