--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -1,4 +1,4 @@
-\documentclass[a4,debug,notitlepage]{tufte-book}
+\documentclass[a4,debug,notitlepage,nobib]{tufte-book}
 
 \usepackage[protrusion=true,expansion=true,tracking=true,kerning=true,spacing=true]{microtype}
 \usepackage{graphicx}
@@ -78,5 +78,8 @@
 \chapter{Recommendations for expressing collider constraints}
 \label{sec:ColliderConstraints} 
 \input{tex/ColliderConstraints.tex}
+
+\bibliographystyle{unsrtnat}
+\bibliography{doc}
 
 \end{document}
