Added figure directory
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@12 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -13,3 +13,19 @@
       doi           = {10.1142/S0217751X11054905}
 
 }
+
+@article{Goodman:2010ku,
+      author         = "Goodman, Jessica and Ibe, Masahiro and Rajaraman, Arvind
+                        and Shepherd, William and Tait, Tim M.P. and others",
+      title          = "{Constraints on Dark Matter from Colliders}",
+      journal        = "Phys.Rev.",
+      volume         = "D82",
+      pages          = "116010",
+      doi            = "10.1103/PhysRevD.82.116010",
+      year           = "2010",
+      eprint         = "1008.1783",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "UCI-HEP-TR-2010-15",
+      SLACcitation   = "%%CITATION = ARXIV:1008.1783;%%",
+}
