EW section: still nowhere near complete, but it compiles
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@13 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -29,3 +29,21 @@
       reportNumber   = "UCI-HEP-TR-2010-15",
       SLACcitation   = "%%CITATION = ARXIV:1008.1783;%%",
 }
+
+@article{Nelson:2013pqa,
+      author         = "Nelson, Andy and Carpenter, Linda M. and Cotta, Randel
+                        and Johnstone, Adam and Whiteson, Daniel",
+      title          = "{Confronting the Fermi Line with LHC data: an Effective
+                        Theory of Dark Matter Interaction with Photons}",
+      journal        = "Phys.Rev.",
+      number         = "5",
+      volume         = "D89",
+      pages          = "056011",
+      doi            = "10.1103/PhysRevD.89.056011",
+      year           = "2014",
+      eprint         = "1307.5064",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1307.5064;%%",
+}
+
