--- a/doc/tex/EWSpecificModels.tex
+++ b/doc/tex/EWSpecificModels.tex
@@ -12,15 +12,17 @@ Section~\ref{subsec:MonojetLikeModels}.
 
 The models considered can be divided in four categories:
 \begin{description}
- \item[EFT models where the boson is radiated from the initial state]: as depicted in Figure~\ref{} (a), these
- models follow the nomenclature and theory for the EFT benchmarks commonly used by MET+X searches~\ref{Goodman:2010ku}. 
- \item[EFT models where the boson is directly coupled]
- \item[Simplified models]
+ \item[EFT models where the boson is radiated from the initial state]: as depicted in 
+ the top diagram of Figure~\ref{fig:VPlusMET_EFT}, these  models follow the nomenclature and theory 
+ for the EFT benchmarks commonly used by MET+X searches~\cite{Goodman:2010ku}. 
+ \item[EFT models where the boson is directly coupled to DM]: shown in the bottom of Figure~\ref{fig:VPlusMET_EFT},
+ these models 
+ \item[Simplified models where the boson is radiated from the initial state]
+ \item[Specific simplified models]
 \end{description}
-
 
 \begin{figure}[h!]
   \centering
-    \includegraphics[width=0.5\textwidth]{monoV_EFT}
-  \caption{A picture of a gull.\label{fig:monoV_EFT}}
+    \includegraphics[width=0.5\textwidth]{figures/VPlusMET_EFT}
+  \caption{Sketch of EFT models for V+MET searches, adapted from~\citep{Nelson:2013pqa}. \label{fig:VPlusMET_EFT}}
 \end{figure}
