NOW it compiles
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@14 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EWSpecificModels.tex
+++ b/doc/tex/EWSpecificModels.tex
@@ -10,13 +10,14 @@ Section~\ref{subsec:MonojetLikeModels}.
 
 %%%Classification of models
 
+
 The models considered can be divided in four categories:
 \begin{description}
- \item[EFT models where the boson is radiated from the initial state]: as depicted in 
+ \item[EFT models where the boson is radiated from the initial state] As depicted in 
  the top diagram of Figure~\ref{fig:VPlusMET_EFT}, these  models follow the nomenclature and theory 
  for the EFT benchmarks commonly used by MET+X searches~\cite{Goodman:2010ku}. 
- \item[EFT models where the boson is directly coupled to DM]: shown in the bottom of Figure~\ref{fig:VPlusMET_EFT},
- these models 
+ \item[EFT models where the boson is directly coupled to DM] Shown in the bottom of Figure~\ref{fig:VPlusMET_EFT},
+ these models allow for an EFT vertex that directly couples the boson to Dark Matter. 
  \item[Simplified models where the boson is radiated from the initial state]
  \item[Specific simplified models]
 \end{description}
