Lit review for EW EFT models
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@15 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -1,3 +1,5 @@
+%%%%%%%%%%%%%%%%Test
+
 @article{dijetHarris,
 
       author        = {Robert M. Harris and Konstantinos Kousouris},
@@ -7,12 +9,14 @@
       number        = {30n31},
       pages         = {5005-5055},
       year          = {2011},
-      eprint         = "1110.5302",
+      eprint        = "1110.5302",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
       doi           = {10.1142/S0217751X11054905}
 
 }
+
+%%%%%%%%%%%%%%%%EFT references 
 
 @article{Goodman:2010ku,
       author         = "Goodman, Jessica and Ibe, Masahiro and Rajaraman, Arvind
@@ -28,6 +32,40 @@
       primaryClass   = "hep-ph",
       reportNumber   = "UCI-HEP-TR-2010-15",
       SLACcitation   = "%%CITATION = ARXIV:1008.1783;%%",
+}
+
+%%%%%%%%%%%%%%%%EW models
+
+@article{Zhou:2013fla,
+      author         = "Zhou, Ning and Berge, David and Whiteson, Daniel",
+      title          = "{Mono-everything: combined limits on dark matter
+                        production at colliders from multiple final states}",
+      journal        = "Phys.Rev.",
+      number         = "9",
+      volume         = "D87",
+      pages          = "095013",
+      doi            = "10.1103/PhysRevD.87.095013",
+      year           = "2013",
+      eprint         = "1302.3619",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1302.3619;%%",
+}
+
+@article{Cotta:2012nj,
+      author         = "Cotta, R.C. and Hewett, J.L. and Le, M.P. and Rizzo,
+                        T.G.",
+      title          = "{Bounds on Dark Matter Interactions with Electroweak
+                        Gauge Bosons}",
+      journal        = "Phys.Rev.",
+      volume         = "D88",
+      pages          = "116009",
+      doi            = "10.1103/PhysRevD.88.116009",
+      year           = "2013",
+      eprint         = "1210.0525",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1210.0525;%%",
 }
 
 @article{Nelson:2013pqa,
@@ -47,3 +85,139 @@
       SLACcitation   = "%%CITATION = ARXIV:1307.5064;%%",
 }
 
+@article{Carpenter:2013xra,
+      author         = "Carpenter, Linda and DiFranzo, Anthony and Mulhearn,
+                        Michael and Shimmin, Chase and Tulin, Sean and others",
+      title          = "{Mono-Higgs-boson: A new collider probe of dark matter}",
+      journal        = "Phys.Rev.",
+      number         = "7",
+      volume         = "D89",
+      pages          = "075017",
+      doi            = "10.1103/PhysRevD.89.075017",
+      year           = "2014",
+      eprint         = "1312.2592",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1312.2592;%%",
+}
+
+@article{Bai:2012xg,
+      author         = "Bai, Yang and Tait, Tim M.P.",
+      title          = "{Searches with Mono-Leptons}",
+      journal        = "Phys.Lett.",
+      volume         = "B723",
+      pages          = "384-387",
+      doi            = "10.1016/j.physletb.2013.05.057",
+      year           = "2013",
+      eprint         = "1208.4361",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "SLAC-PUB-15221, UCI-HEP-TR-2012-11",
+      SLACcitation   = "%%CITATION = ARXIV:1208.4361;%%",
+}
+
+%%%%%%%%%%%%%%%%EW models, experimental searches
+
+%%%ATLAS
+@article{Aad:2013oja,
+      title          = "{Search for dark matter in events with a hadronically
+                        decaying W or Z boson and missing transverse momentum in
+                        $pp$ collisions at $\sqrt{s} =$ 8 TeV with the ATLAS
+                        detector}",
+      collaboration  = "ATLAS",
+      journal        = "Phys.Rev.Lett.",
+      number         = "4",
+      volume         = "112",
+      pages          = "041802",
+      doi            = "10.1103/PhysRevLett.112.041802",
+      year           = "2014",
+      eprint         = "1309.4017",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2013-158",
+      SLACcitation   = "%%CITATION = ARXIV:1309.4017;%%",
+}
+
+@article{Aad:2014vka,
+      title          = "{Search for dark matter in events with a Z boson and
+                        missing transverse momentum in pp collisions at
+                        $\sqrt{s}$=8 TeV with the ATLAS detector}",
+      collaboration  = "ATLAS",
+      journal        = "Phys.Rev.",
+      number         = "1",
+      volume         = "D90",
+      pages          = "012004",
+      doi            = "10.1103/PhysRevD.90.012004",
+      year           = "2014",
+      eprint         = "1404.0051",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2013-231",
+      SLACcitation   = "%%CITATION = ARXIV:1404.0051;%%",
+}
+
+
+
+@article{Aad:2014tda,
+      title          = "{Search for new phenomena in events with a photon and
+                        missing transverse momentum in $pp$ collisions at
+                        $\sqrt{s}=8$ TeV with the ATLAS detector}",
+      collaboration  = "ATLAS",
+      journal        = "Phys.Rev.",
+      number         = "1",
+      volume         = "D91",
+      pages          = "012008",
+      doi            = "10.1103/PhysRevD.91.012008",
+      year           = "2015",
+      eprint         = "1411.1559",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2014-245",
+      SLACcitation   = "%%CITATION = ARXIV:1411.1559;%%",
+}
+
+@article{ATLAS:2014wra,
+      author         = "Aad, Georges and others",
+      title          = "{Search for new particles in events with one lepton and
+                        missing transverse momentum in $pp$ collisions at
+                        $\sqrt{s}$ = 8 TeV with the ATLAS detector}",
+      collaboration  = "ATLAS",
+      journal        = "JHEP",
+      volume         = "1409",
+      pages          = "037",
+      doi            = "10.1007/JHEP09(2014)037",
+      year           = "2014",
+      eprint         = "1407.7494",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2014-139",
+      SLACcitation   = "%%CITATION = ARXIV:1407.7494;%%",
+}
+
+%%%CMS
+
+@article{Khachatryan:2014rwa,
+      title          = "{Search for new phenomena in monophoton final states in
+                        proton-proton collisions at $\sqrt{s}$ = 8 TeV}",
+      collaboration  = "CMS",
+      year           = "2014",
+      eprint         = "1410.8812",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-EXO-12-047, CERN-PH-EP-2014-253",
+      SLACcitation   = "%%CITATION = ARXIV:1410.8812;%%",
+}
+
+@article{Khachatryan:2014tva,
+      author         = "Khachatryan, Vardan and others",
+      title          = "{Search for physics beyond the standard model in final
+                        states with a lepton and missing transverse energy in
+                        proton-proton collisions at $\sqrt{s}$ = 8 TeV}",
+      collaboration  = "CMS",
+      year           = "2014",
+      eprint         = "1408.2745",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-EXO-12-060, CERN-PH-EP-2014-176",
+      SLACcitation   = "%%CITATION = ARXIV:1408.2745;%%",
+}
