--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -79,6 +79,7 @@
 \label{sec:ColliderConstraints} 
 \input{tex/ColliderConstraints.tex}
 
+%%FIXME: it does not understand Collaboration. Fix here rather than hacking bib file?
 \bibliographystyle{unsrtnat}
 \bibliography{doc}
 
