Commented some issues out, added .pdf version, removed older version of authorlist from frontmatter
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@18 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -5,7 +5,8 @@
 \usepackage[svgnames]{xcolor}
 \usepackage{hyperref}
 \setkeys{Gin}{width=\linewidth,totalheight=\textheight,keepaspectratio}
-\usepackage{amsmath}  % extended mathematics
+% \usepackage{amsmath}  
+\usepackage{mathtools} % extended mathematics
 \usepackage{booktabs} % book-quality tables
 \usepackage{units}    % non-stacked fractions and better unit spacing
 \usepackage{multicol} % multiple column layout facilities
