--- a/doc/tex/EWSpecificModels.tex
+++ b/doc/tex/EWSpecificModels.tex
@@ -11,12 +11,13 @@ Section~\ref{subsec:MonojetLikeModels}.
 
 %%%Classification of models
 
-\begin{figure}[h!]
-  \centering
-    \includegraphics[width=0.5\textwidth]{figures/VPlusMET_EFT}
-  \caption{Sketch of EFT models for V+MET searches, adapted from~\citep{Nelson:2013pqa}. \label{fig:VPlusMET_EFT}}
-\end{figure}
-
+%FIXME: CD - the tufte.cls on SVN does not like citep. Why? Will look into it later.
+% \begin{figure}[h!]
+%   \centering
+%     \includegraphics[width=0.5\textwidth]{figures/VPlusMET_EFT}
+%   \caption{Sketch of EFT models for V+MET searches, adapted from~\citep{Nelson:2013pqa}. \label{fig:VPlusMET_EFT}}
+% \end{figure}
+% 
 The models considered can be divided in four categories:
 \begin{description}
  \item[EFT models where the boson is radiated from the initial state] As depicted in 
