--- a/doc/frontmatter.tex
+++ b/doc/frontmatter.tex
@@ -16,7 +16,8 @@
 \vspace{4\baselineskip}
 {\Large 
 \noindent
-\input contributors.tex
+% \input contributors.tex
+Author/contributor list to be added at the end of the works
 }\\
 \vspace{4\baselineskip}
 \noindent
