add commands and figure
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@19 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -1,3 +1,10 @@
+\newcommand{\bra}[1]{\langle #1|}
+\newcommand{\ket}[1]{|#1\rangle}
+\newcommand{\MET}{\slashed{E}_T}
+\newcommand{\mDM}{m_{\rm{DM}}}
+\newcommand{\mMed}{M_{\rm{med}}}
+\newcommand{\gDM}{g_{\rm{DM}}}
+\newcommand{\gq}{g_q}
 \paragraph{Vector and axial vector mediator, s-channel exchange}
 
 \begin{itemize}
@@ -6,7 +13,7 @@
  \item Production mechanism
 % \begin{figure}[t!]
 % \centering
-% \includegraphics[width=0.5\columnwidth]{monoLHC.pdf}
+% \includegraphics[width=0.5\columnwidth]{figures/monoLHC.pdf}
 % \caption{The diagram shows the pair production of dark matter particles in association with a parton from the initial state via an s-channel vector or axial-vector mediator. The process if specified by ($\mMed ,\, \mDM ,\, \gDM ,\, \gq)$, the mediator and dark matter masses, and the mediator couplings to dark matter and quarks respectively.}
 % \label{fig:OP}
 % \end{figure}
