--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -1,6 +1,6 @@
 \documentclass[a4,debug,notitlepage,nobib]{tufte-book}
 
-\usepackage[protrusion=true,expansion=true,tracking=true,kerning=true,spacing=true]{microtype}
+%% \usepackage[protrusion=true,expansion=true,tracking=true,kerning=true,spacing=true]{microtype}
 \usepackage{graphicx}
 \usepackage[svgnames]{xcolor}
 \usepackage{hyperref}
