fixes for previous commits
- added natbib for citep used by Caterina's text
- turn on microtype if directory contains a file named "moderntex" (keep this off for the lxplus latex, which generates funny letterspacing throughout the document)


git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@22 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -1,11 +1,9 @@
 \documentclass[a4,debug,notitlepage,nobib]{tufte-book}
 
-%% \usepackage[protrusion=true,expansion=true,tracking=true,kerning=true,spacing=true]{microtype}
 \usepackage{graphicx}
 \usepackage[svgnames]{xcolor}
 \usepackage{hyperref}
 \setkeys{Gin}{width=\linewidth,totalheight=\textheight,keepaspectratio}
-% \usepackage{amsmath}  
 \usepackage{mathtools} % extended mathematics
 \usepackage{booktabs} % book-quality tables
 \usepackage{units}    % non-stacked fractions and better unit spacing
@@ -15,6 +13,11 @@
 \usepackage{refcount}
 \usepackage{calc}
 \usepackage{lastpage}
+\usepackage{natbib} % for \citep
+% create a dummy file (shell command "touch moderntex") to turn on some features that don't work on lxplus
+\IfFileExists{moderntex}{
+  \usepackage[protrusion=true,expansion=true,tracking=true,kerning=true,spacing=true]{microtype}
+}{}
 \fvset{fontsize=\normalsize} % default font size for fancy-verbatim environments
 
 % Prints an asterisk that takes up no horizontal space.
