amend statement about authorlist
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@23 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/frontmatter.tex
+++ b/doc/frontmatter.tex
@@ -17,7 +17,7 @@
 {\Large 
 \noindent
 % \input contributors.tex
-Author/contributor list to be added at the end of the works
+Author/contributor list to be added as document is finalized.
 }\\
 \vspace{4\baselineskip}
 \noindent
