some adjustments to simplified model figure
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@29 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -11,12 +11,12 @@
 \item Matrix Element implementations (with references)
 \begin{itemize}
  \item Production mechanism
-\begin{figure}[t!]
+\begin{figure*}[t!]
 \centering
-\includegraphics[width=0.5\columnwidth]{figures/monoLHC.pdf}
-\caption{The diagram shows the pair production of dark matter particles in association with a parton from the initial state via an s-channel vector or axial-vector mediator. The process if specified by ($\mMed ,\, \mDM ,\, \gDM ,\, \gq)$, the mediator and dark matter masses, and the mediator couplings to dark matter and quarks respectively.}
+\includegraphics[width=0.5\linewidth]{figures/monoLHC.pdf}
+\caption[][\baselineskip]{The diagram shows the pair production of dark matter particles in association with a parton from the initial state via an s-channel vector or axial-vector mediator. The process if specified by ($\mMed ,\, \mDM ,\, \gDM ,\, \gq)$, the mediator and dark matter masses, and the mediator couplings to dark matter and quarks respectively.}
 \label{fig:OP}
-\end{figure}
+\end{figure*}
 
 
  \item Lagrangian
