--- a/doc/tex/EWSpecificModels.tex
+++ b/doc/tex/EWSpecificModels.tex
@@ -28,7 +28,7 @@ The models considered can be divided in four categories:
  \item[Simplified models where the boson is radiated from the initial state] These models follow those
  already described in Section~\ref{subsec:MonojetLikeModels}, replacing the initial state gluon with a boson.
  \item[V-specific simplified models] These models postulate direct couplings of new mediators
- to bosons, e.g. they couple the Higgs boson to a new scalar~\cite{Carpenter:2013xra}. 
+ to bosons, e.g. they couple the Higgs boson to a new scalar~\citep{Carpenter:2013xra}. 
 \end{description}
 
 The following Sections describe the models within these categories, 
@@ -41,17 +41,17 @@ implementation.
 
 Searches in the mono-jet final state are generally more sensitive with respect to final
 states including bosons, due to the much larger rates of jet+MET signal events with 
-respect to radiation of bosons~\cite{Zhou:2013fla}.
+respect to radiation of bosons~\citep{Zhou:2013fla}.
 The rates for the H+MET signature in these models are too low for EFT models 
-to be considered a viable benchmark~\cite{Carpenter:2013xra}.
-However, the presence of photons~\cite{Khachatryan:2014rwa, Aad:2014vka}, 
-leptons from W and Z decays~\cite{Khachatryan:2014tva, Aad:2014vka, ATLAS:2014wra} 
-and W or Z bosons decaying hadronically~\cite{Aad:2013oja}
+to be considered a viable benchmark~\citep{Carpenter:2013xra}.
+However, the presence of photons~\citep{Khachatryan:2014rwa, Aad:2014vka}, 
+leptons from W and Z decays~\citep{Khachatryan:2014tva, Aad:2014vka, ATLAS:2014wra} 
+and W or Z bosons decaying hadronically~\citep{Aad:2013oja}
 allow to reject the background more effectively, making Z/gamma/W+MET search results for 
 simple EFT benchmarks still worth comparing with jet+MET.
 Furthermore, in the case of W boson radiation, the values of the 
 couplings to up- and down-type quarks determine the interference between
-the radiation of a W from the up or from the down quark~\cite{Bai:2012xg}. 
+the radiation of a W from the up or from the down quark~\citep{Bai:2012xg}. 
 In case of constructive interference, the W+MET signature is more sensitive
 than the jet+MET signature (insensitive to the values of couplings). 
 %The couplings to up and down quark are defined as $C(u)$ and $C(d)$ 
@@ -59,7 +59,7 @@ than the jet+MET signature (insensitive to the values of couplings).
 \paragraph{EFT models with direct DM-boson couplings}
 
 A complete list of effective operators with direct DM/boson couplings, 
-up to dimension 7, can be found in~\cite{Cotta:2012nj}.
+up to dimension 7, can be found in~\citep{Cotta:2012nj}.
 
 \paragraph{Simplified models with ISR boson radiation}
 
